Deprecate editor factories